--- a/style.css
+++ b/style.css
@@ -394,9 +394,9 @@ footer {
   margin-bottom: 1rem;
 }
 
-#nxtStep {
+/* #nxtStep {
   display: none;
-}
+} */
 
 /* #nxtStep {
   visibility: hidden;
