--- a/style.css
+++ b/style.css
@@ -543,10 +543,6 @@ button {
     margin: 0 -2rem;
   }
 
-  .bg-vid video {
-    min-width: 100%;
-  }
-
   .waterRise {
     margin: 0px;
   }
@@ -556,5 +552,11 @@ button {
   .box2 > * {
     margin-left: 2rem;
     margin-right: 2rem;
+  }
+}
+
+@media (min-width: 801px) and (max-height: 801px){
+  .bg-vid video {
+    min-width: 100%;
   }
 }
